Fix guide view code & link wrap (#496)

--- a/assets/src/scss/5-pages/_guide.scss
+++ b/assets/src/scss/5-pages/_guide.scss
@@ -171,3 +171,9 @@ div.image {
   @include rem(height, 12px);
   background-image: url(../../../image/guide/tarr.svg);
 }
+.guide-view {
+  code,
+  a {
+    word-break: break-all;
+  }
+}
